# interpreter

./: .gitlab-ci.yml  CHANGELOG  CMakeLists.txt  Enum.h  Environment.cpp  Environment.h  Expression.h  Interpreter.cpp  Interpreter.h  LICENSE  Main.cpp  ParseError.h  Parser.cpp  Parser.h  Printer.cpp  Printer.h  README.md  RuntimeError.h  Scanner.cpp  Scanner.h  Statement.h  Token.cpp  Token.h  Utils.cpp  Utils.h  Visitor.h
Expressions/: Assign.cpp  Assign.h  Binary.cpp  Binary.h  Call.cpp  Call.h  Get.cpp  Get.h  Grouping.cpp  Grouping.h  Literal.cpp  Literal.h  Logical.cpp  Logical.h  Set.cpp  Set.h  Super.cpp  Super.h  This.cpp  This.h  Unary.cpp  Unary.h  Variable.cpp  Variable.h
Statements/: Block.cpp  Block.h  Class.cpp  Class.h  Copy.cpp  Copy.h  ExpressionStmnt.cpp  ExpressionStmnt.h  Find.cpp  Find.h  FindSame.cpp  FindSame.h  Function.cpp  Function.h  If.cpp  If.h  Move.cpp  Move.h  Print.cpp  Print.h  Remove.cpp  Remove.h  Return.cpp  Return.h  Var.cpp  Var.h  While.cpp  While.h
